<resources>
    <string name="app_name">LeafBank</string>
    <string name="leaf_bank">Leaf Bank</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="register">Regisztráció</string>
    <string name="login">Bejelentkezés</string>
    <string name="name">Név</string>
    <string name="passwordRep">Jelszó 2x</string>
    <string name="email">Email</string>
    <string name="szamla">Számla</string>
    <string name="toaccountnumber">Címzett számlaszáma</string>
    <string name="amount">Összeg</string>
    <string name="send">Küldés</string>
    <string name="hi">Szia</string>
    <string name="hr">hr</string>
    <string name="inTextChecked">Bejövő\n•</string>
    <string name="outText">Kimenő</string>
    <string name="inText">Bejövő</string>
    <string name="outTextChecked">Kimenő\n•</string>
    <string name="sendmoney">Pénz küldése</string>
    <string name="findatm">ATM kereső</string>
    <string name="history">Előzmények</string>
    <string name="ereceipt">E-Számla</string>
    <string name="noAccont">Még nincs fiókod? Regisztrálj</string>
    <string name="yesAccount">Már van fiókod? Lépj be</string>
    <string name="arrow">arrow</string>
    <string name="passwordReset">Jelszó visszaállítása</string>
    <string name="logout">Kijelentkezés</string>
    <string name="delteAccount">Fiók törlése</string>
</resources>