<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".login.LoginActivity">

    <!--    CONTAINER    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_container"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_drawables"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/login_loginBtn"
            app:layout_constraintTop_toTopOf="parent">
            <!--    TITLE    -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/tropical"
                android:text="@string/leaf_bank"

                android:textAlignment="center"
                android:textColor="#e3efc2"
                android:textSize="55sp" />

            <!--    EMAIL_TEXT    -->
            <TextView
                android:id="@+id/login_emailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="25dp"

                android:fontFamily="@font/josefinsanslight"
                android:labelFor="@id/login_emailEditText"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textColor="#e3efc2"
                android:textSize="20sp" />

            <!--    EMAIL_EDITBOX    -->
            <EditText
                android:id="@+id/login_emailEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="12dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/editbox"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="5dp"
                android:textColor="#e3efc2"

                android:textSize="18sp" />

            <!--    ERMAILERROR_TEXT    -->
            <TextView
                android:id="@+id/login_emailErrorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="25dp"

                android:text=""
                android:textColor="#dba695"
                android:textSize="17sp" />

            <!--    PASSWORD_TEXT    -->
            <TextView
                android:id="@+id/login_passwordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"

                android:fontFamily="@font/josefinsanslight"
                android:labelFor="@id/login_passwordEditText"
                android:text="@string/password"
                android:textAllCaps="true"

                android:textColor="#e3efc2"
                android:textSize="20sp" />

            <!--    PASSWORD_EDITBOX    -->
            <EditText
                android:id="@+id/login_passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="12dp"
                android:autofillHints="password"
                android:background="@drawable/editbox"
                android:inputType="textPassword"
                android:paddingHorizontal="5dp"

                android:textColor="#e3efc2"
                android:textSize="18sp" />

            <!--    PASSWORD_ERROR_TEXT    -->
            <TextView
                android:id="@+id/login_passwordErrorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="25dp"

                android:text=""
                android:textColor="#dba695"
                android:textSize="17sp" />

            <!--    REGISTER_BUTTON    -->
            <Button
                android:id="@+id/login_registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="30dp"
                android:background="#00000000"
                android:fontFamily="@font/josefinsansregular"

                android:onClick="registerClick"
                android:text="@string/noAccont"
                android:textAlignment="textStart"
                android:textColor="#e3efc2"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--    LOGIN_BUTTON    -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_btn"
            android:fontFamily="@font/maitreeregular"
            android:onClick="loginClick"
            android:text="@string/login"

            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>