<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_b"
    tools:context=".history.HistoryInActivity">

    <LinearLayout
        android:id="@+id/titlelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/home_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hi"
            android:textColor="@color/white1"
            android:textSize="35sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/hr"
            app:srcCompat="@drawable/hr" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/history_pageselector"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/titlelayout">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/history_toinbtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:elegantTextHeight="true"
            android:fontFamily="@font/didactregular"
            android:onClick="toinbtn_click"
            android:text="@string/inTextChecked"

            android:textAllCaps="false"
            android:textColor="@color/white1"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/history_tooutbtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/history_tooutbtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:elegantTextHeight="true"
            android:fontFamily="@font/didactregular"
            android:onClick="tooutbtn_click"
            android:text="@string/outText"

            android:textAllCaps="false"
            android:textColor="@color/white1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/history_toinbtn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="500dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/history_pageselector">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_navbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/home_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_homebtn"
            android:layout_width="46dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/home_home"
            android:onClick="hombebtn_click"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_bankaccountbtn"
            android:layout_width="68dp"
            android:layout_height="70dp"
            android:background="@drawable/bankaccount_button"
            android:onClick="bankaccountbtn_click"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/home_profilebtn"

            app:layout_constraintStart_toEndOf="@+id/home_homebtn"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_profilebtn"
            android:layout_width="46dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/home_profile"
            android:onClick="profilebtn_click"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>