<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".RegisterActivity">

    <!--    CONTAINER    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:background="@drawable/login_drawables">

        <!--    TITLE    -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/tropical"
            android:text="@string/leaf_bank"

            android:textAlignment="center"
            android:textColor="#e3efc2"
            android:textSize="55sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--    USERNAME_TEXT    -->
        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"

            android:fontFamily="@font/josefinsanslight"
            android:text="@string/username"
            android:textAllCaps="true"
            android:textColor="#e3efc2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            android:labelFor="@id/usernameEditText"/>

        <!--    USERNAME_EDITBOX    -->
        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/editbox"
            android:inputType="textPersonName"
            android:paddingHorizontal="5dp"
            android:textColor="#e3efc2"
            android:autofillHints="username"

            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />

        <!--    PASSWORD_TEXT    -->
        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"

            android:fontFamily="@font/josefinsanslight"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textColor="#e3efc2"

            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
            android:labelFor="@id/passwordEditText"/>

        <!--    PASSWORD_EDITBOX    -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/editbox"
            android:inputType="textPassword"
            android:paddingHorizontal="5dp"
            android:autofillHints="password"

            android:textColor="#e3efc2"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

        <!--    PASSWORD_2_TEXT    -->
        <TextView
            android:id="@+id/passwordRepTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"

            android:fontFamily="@font/josefinsanslight"
            android:text="@string/passwordRep"
            android:textAllCaps="true"
            android:textColor="#e3efc2"

            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            android:labelFor="@id/passwordRepEditText"/>

        <!--    PASSWORD_2_EDITBOX    -->
        <EditText
            android:id="@+id/passwordRepEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/editbox"
            android:inputType="textPassword"
            android:paddingHorizontal="5dp"
            android:autofillHints="password"

            android:textColor="#e3efc2"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordRepTextView" />

        <!--    NAME_TEXT    -->
        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"

            android:fontFamily="@font/josefinsanslight"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="#e3efc2"

            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordRepEditText"
            android:labelFor="@id/emailEditText"/>

        <!--    EMAIL_EDITBOX    -->
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/editbox"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="5dp"
            android:autofillHints="emailAddress"

            android:textColor="#e3efc2"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

        <!--    REGISTER_BUTTON    -->
        <Button
            android:id="@+id/registerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/josefinsansregular"
            android:background="#00000000"

            android:textAlignment="textStart"
            android:text="Van fiókod? Lépj be"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#e3efc2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <!--    LOGIN_BUTTON    -->
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_btn"
            android:fontFamily="@font/maitreeregular"
            android:onClick="registerClick"
            android:text="@string/register"
            android:textAllCaps="false"

            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>